@@ -6,6 +6,10 @@ Priorities for release:
 * `missing' program
 * copyrights on m4 files, aclocal output
 
+For now I guess I'll just have automake give an error if it encounters
+non-C source in a libtool library specification.
+
+
 * must split $obj into two parts: one for libtool and one for
   deansification.  Otherwise .S files will be deansified!
 
