@@ -19,7 +19,7 @@ confsub.test primary.test primary2.test depend2.test spell3.test \
 comment2.test vpath.test symlink.test discover.test acinclude.test req.test \
 acsilent.test distdir.test lex2.test libobj4.test libobj5.test version.test \
 ranlib.test confvar.test confvar2.test stdlib.test cxxo.test colon2.test \
-colon3.test remake.test
+colon3.test remake.test output.test
 
 EXTRA_DIST = defs $(TESTS)
 
