@@ -1,3 +1,7 @@
+Fri Dec  6 19:00:31 1996  Tom Tromey  <tromey@cygnus.com>
+
+	* output.test: New file.
+
 Thu Dec  5 18:23:17 1996  Tom Tromey  <tromey@cygnus.com>
 
 	* remake.test: New file.
