@@ -1,3 +1,8 @@
+Fri Dec  6 18:54:10 1996  Tom Tromey  <tromey@cygnus.com>
+
+	* automake.in (handle_configure): Require actual input files, not
+	rewritten input files.  From Ulrich Drepper.
+
 Thu Dec  5 02:52:20 1996  Tom Tromey  <tromey@cygnus.com>
 
 	Suggestion from Mark Galassi:
